Fix spacing on footer

--- a/public/css/common.less
+++ b/public/css/common.less
@@ -462,7 +462,7 @@
 
 #lpFooter {
     color: #777;
-    padding-top: 150px;
+    padding: 150px 0 20px;
 
     #lpSiteBy {
         float: right;
