--- a/public/css/edit.less
+++ b/public/css/edit.less
@@ -283,7 +283,7 @@ body {
     border-bottom: 1px solid @border1;
     display: flex;
     height: 60px;
-    margin: 0 -20px; /*lpList padding */
+    margin: 0 -20px 20px; /*lpList padding */
     position: relative;
 
     * {
